--- a/index.css
+++ b/index.css
@@ -55,6 +55,10 @@ p {
   font-size: 20px;
   text-align: center;
 }
+.contact-paragraph a {
+  text-decoration: none;
+  color: green;
+}
 .carousel-indicators button {
   border-radius: 50%;
 }
