--- a/contact.css
+++ b/contact.css
@@ -59,6 +59,7 @@ p {
 .contact-paragraph a {
   text-decoration: none;
   color: green;
+  font-size: 24px;
 }
 .carousel-indicators button {
   border-radius: 50%;
