--- a/contact.css
+++ b/contact.css
@@ -65,6 +65,15 @@ p {
   border-radius: 50%;
 }
 
+.social-links a {
+  font-size: 18px;
+  margin: 0 3px;
+  color: green;
+  padding: 10px 14px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+
 @media (max-width: 576px) {
   .image-section img {
     display: none;
