--- a/index.css
+++ b/index.css
@@ -62,6 +62,25 @@ p {
 .carousel-indicators button {
   border-radius: 50%;
 }
+.mail-link {
+  font-size: 24px;
+  color: black;
+  text-decoration: none;
+}
+.mail-link:hover {
+  color: green;
+}
+.social-links a {
+  font-size: 18px;
+  margin: 0 3px;
+  color: green;
+  padding: 10px 14px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+.social-links a:hover {
+  background: var(--primary-color);
+}
 
 @media (max-width: 576px) {
   .image-section img {
