--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ nav {
   color: white;
 }
 p {
-  font-family: "Poppins", Arial, "Cerebri" sans-serif, monospace;
+  font-family: "Nunito Sans", sans-serif;
 }
 .contact-paragraph {
   font-size: 20px;
